feat(bixarena): extend model schema with initial batch of identified model data (SMR-516) (#3542)